[package]
name = "casey-next"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once-cell-regex = "0.2.1"
once_cell = "1.16.0"
regex = "1.7.0"
split_preserve = "0.1.0"
strum = "0.24.1"
strum_macros = "0.24.3"
thiserror = "1.0.38"
